# verifybot

./: README.md  bot.py  main.py  pyproject.toml
configuration/: config.py
